# icub-stuff

torqueObserver/: CMakeLists.txt  main.cpp
